# sdk-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_STATUS.md  LICENSE  QUICK_START_WEBHOOK.md  README.md  README_PHASE_0.md  WEBHOOK_SETUP_COMPLETE.md  components.json  docker-compose.yml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  prisma.config.ts  proxy.ts  pyproject.toml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  robots.ts  sitemap.ts
components/: clerk-provider.tsx  language-switcher.tsx
config/: geo-allowed-countries.ts  product.ts
constants/: billing.ts
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: ASSIGN_ADMIN_ROLE.md  CI_CD.md  DARK_MODE.md  DESIGN_SYSTEM.md  I18N_SETUP.md  PHASE_0_WAITLIST.md  README.md  SETUP_CLERK.md  SHADCN_INTEGRATION.md  SUMMARY.md  TAILWIND_V4_CONFIG.md  WEBHOOK_TESTING.md  self-hosted.md
examples/: README.md
gatectr/: __init__.py  client.py  errors.py  http.py  stream.py  types.py
hooks/: use-active-team.ts  use-notifications.ts  use-permissions.ts  use-roles.ts
i18n/: request.ts  routing.ts
lib/: api-auth.ts  audit.ts  auth.ts  clerk-localization.ts  encryption.ts  firewall.ts  interpolate.ts  optimizer.ts  overage.ts  permissions.ts  plan-guard.ts  plan-vars.ts  prisma.ts  queues.ts  quota-response.ts  rate-limiter.ts  redis.ts  resend.ts  router.ts  seats.ts  security-headers.ts  seo.ts  stripe.ts  webhooks.ts
prisma/: schema.prisma  seed.ts
profile/: README.md
scripts/: setup-stripe-prices.ts  test-billing-emails.ts  test-webhook-setup.ts
sdk-node/: README.md
sdk-python/: README.md
tests/: conftest.py  setup.ts  (+5 more)
(+379 files in other folders)
