[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatectr-sdk"
version = "0.1.0"
description = "Python SDK for GateCtr — One gateway. Every LLM."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://gatectr.com"
Repository = "https://github.com/GateCtr/sdk-python"
Changelog = "https://github.com/GateCtr/sdk-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["gatectr"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov = "pytest --cov=gatectr --cov-report=term-missing --cov-fail-under=80"
lint = "ruff check gatectr/ tests/"
format = "ruff format gatectr/ tests/"
typecheck = "mypy gatectr/"
build = "hatch build"
clean = "rm -rf dist/ *.egg-info .mypy_cache .ruff_cache __pycache__"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["gatectr"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gatectr"]
